# claudette-cli

./: .gitignore  CLAUDE.md  PYPI.md  README-dev.md  README.md  backup-worktrees.sh  fix-all-worktrees.sh  pypi-push.sh  pyproject.toml  recover-worktrees-v2.sh  recover-worktrees.sh  restore-all-worktrees.sh  restore-critical-worktrees.sh
src/claudette/: __init__.py  _version.py  cli.py  config.py
src/claudette/templates/: claude_rc_central
tests/: __init__.py  conftest.py  test_cli_args.py  test_git_helpers.py  test_metadata.py  test_migrations.py  test_project_detection.py
