[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudette"
version = "0.1.0"
description = "Superset multi-environment workflow manager using git worktrees"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
keywords = ["superset", "development", "workflow", "git", "worktree"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uv>=0.1.0",
    "gitpython>=3.1.0",
]

[project.scripts]
claudette = "claudette.cli:app"

[project.urls]
Homepage = "https://github.com/yourusername/claudette"
Documentation = "https://github.com/yourusername/claudette#readme"
Repository = "https://github.com/yourusername/claudette"
Issues = "https://github.com/yourusername/claudette/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/claudette"]